--- a/todo-frontend/src/css/Navbar.css
+++ b/todo-frontend/src/css/Navbar.css
@@ -120,16 +120,23 @@ body {
         justify-content: center;
         text-align: center;
         line-height: 80px;
+        position: relative;
     }
     .navbar-brand {
         width: 100%;
         text-align: center;
     }
-    .navbar-content {
+    /* .navbar-content {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         gap: 10px;
+    } */
+    .navbar-content {
+        position: absolute;
+        right: 12px;
+        top: 50%;
+        transform: translateY(-50%);
     }
     .nav-link {
         font-size: 0.9rem;
@@ -141,8 +148,26 @@ body {
     .navbar .nav-link[href*="register"] {
         display: none !important;
     }
+    
     .btn-logout {
-        font-size: 0.9rem;
-        padding: 8px 10px;
+        background-color: #D4AF37;
+        color: white;
+        padding: 2px 12px;
+        height: 40px;
+        font-size: 0.85rem;
+        font-weight: 600;
+        border-radius: 8px;
+        z-index: 1050;
+        box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        line-height: 1;
+    }
+    .btn-logout:hover {
+        background-color: #B2956B;
+        color: black;
+        transform: scale(1.05);
     }
 }
